Version 0.10.1 "Willoughby" -- Subversion
-----------------

* Changed {content}, {html_blob} and {title} tags to be case
insensitive
* Changed logic of included htaccess so that html can be used
as the default extension for friendly urls
* Fixed a bug where IIS didn't always report QUERY_STRING, which
would generate a warning message
* Fixed a bug where all users can't get to user preferences
* Fixed a bug where css assocations did not get deleted when a
template does
* Fixed a few bugs with the css assocation page
* Fixed a few bugs with the News module
* Fixed bug with phplayers not displaying correctly if the body tag
of the template had any attributes
* Fixed bug where custom 404 message didn't show existing value
* Swedish translation was incorrectly usinng se_SE instead of sv_SE
as it's locale name.

Version 0.10 "Antigua" -- Tue Jul 05 2005
-----------------

* Added dropdown of encodings to add/edit template pages
* Added multiple content blocks
* Added recursive html blobs
* Added ability for modules to use templates, either file based
or db based through a few API calls
* Added support for module translations
* Added indexes to increase performance
* Added bookmarks and recent pages to the admin
* Added javascript tabs to content editing
* Added global locale option to config.php
* Added parameter to CreateLink to allow modules to force contents
to {content} tag, while still displaying the same content in their
{cms_module}.
* Changed admin interface and themes
* Changed installer to use regular Submit buttons...  now works in
Konqueror
* Fixed bug with image path generation in TinyMCE
* Fixed bug with text parameter in print plugin
* Fixed bug with inactive pages still being accessible by page id
* Fixed encoding problems with editing title and menu text in content
* Removed the redirect pages while logging in or out
* Updated ADODB to 4.61
* Updated Smarty to 2.6.9 (Jope)
* Updated TinyMCE to 1.4.4